--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>6171c9d258</BinaryReleaseId>
+    <BinaryReleaseId>5783575c9d99</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -67,25 +67,13 @@
   <!-- When UnzipReleaseBinaries is called, this will run first, as UnzipReleaseBinaries depends on it (check DependsOnTargets of UnzipReleaseBinaries) -->
   <Target Name="DownloadReleaseBinaries">
 	<Message Importance="High" Text="Download '$(BinaryReleaseId)/deps.zip' to 'runtimes'" />
-	<DownloadFile
-		SourceUrl="https://github.com/SciSharp/LLamaSharpBinaries/releases/download/$(BinaryReleaseId)/deps.zip"
-		DestinationFolder="runtimes"
-		DestinationFileName="deps.zip"
-		SkipUnchangedFiles="true"
-        Retries="3"
-	/>
+	<DownloadFile SourceUrl="https://github.com/SciSharp/LLamaSharpBinaries/releases/download/$(BinaryReleaseId)/deps.zip" DestinationFolder="runtimes" DestinationFileName="deps.zip" SkipUnchangedFiles="true" Retries="3" />
   </Target>
 
   <!-- This automatically runs after CheckReleaseBinaries has completed, but only if SkipDownloadReleaseBinaries is not true -->
   <Target Name="UnzipReleaseBinaries" DependsOnTargets="DownloadReleaseBinaries" AfterTargets="CheckReleaseBinaries" Condition="'$(SkipDownloadReleaseBinaries)' != 'true'">
 	<Message Importance="High" Text="Unzip '$(BinaryReleaseId)/deps.zip'" />
-	<Unzip
-		SourceFiles="runtimes/deps.zip"
-		DestinationFolder="runtimes/deps/"
-        SkipUnchangedFiles="true"
-        OverwriteReadOnlyFiles="true"
-		Include="*.dll;*.so;*.dylib;*.metal;"
-	/>
+	<Unzip SourceFiles="runtimes/deps.zip" DestinationFolder="runtimes/deps/" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" Include="*.dll;*.so;*.dylib;*.metal;" />
   </Target>
     
   <Target Name="CheckReleaseBinaries">
