--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -76,6 +76,63 @@ jobs:
           name: llava-bin-linux-${{ matrix.build }}-x64.so
           if-no-files-found: error
 
+  compile-linux-musl:
+    name: Compile (Linux MUSL)
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - build: 'noavx'
+            defines: '-DGGML_AVX=OFF -DGGML_AVX2=OFF -DGGML_FMA=OFF'
+          - build: 'avx2'
+            defines: ''
+          - build: 'avx'
+            defines: '-DGGML_AVX2=OFF'
+          - build: 'avx512'
+            defines: '-DGGML_AVX512=ON'
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: ggerganov/llama.cpp
+          fetch-depth: 0
+          ref: '${{ github.event.inputs.llama_cpp_commit }}'
+      - name: Build
+        id: cmake_build
+        run: |
+          sudo apt-get -y install musl-tools
+          mkdir build
+          cd build
+          cmake -DCMAKE_TOOLCHAIN_FILE=${POLLY_ROOT}/gcc-static.cmake .. ${{ env.COMMON_DEFINE }} ${{ matrix.defines }}
+          cmake -DCMAKE_TOOLCHAIN_FILE=${POLLY_ROOT}/gcc-static.cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
+          ls -R
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./build/bin/libllama.so
+          name: llama-bin-linux-${{ matrix.build }}-musl-x64.so
+          if-no-files-found: error
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./build/bin/libggml.so
+          name: ggml-bin-linux-${{ matrix.build }}-musl-x64.so
+          if-no-files-found: error
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./build/bin/libggml-base.so
+          name: ggml-base-bin-linux-${{ matrix.build }}-musl-x64.so
+          if-no-files-found: error
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./build/bin/libggml-cpu.so
+          name: ggml-cpu-bin-linux-${{ matrix.build }}-musl-x64.so
+          if-no-files-found: error
+      - name: Upload Llava
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./build/bin/libllava_shared.so
+          name: llava-bin-linux-${{ matrix.build }}-musl-x64.so
+          if-no-files-found: error
+
   compile-windows:
     name: Compile (Windows)
     strategy:
@@ -560,6 +617,31 @@ jobs:
           cp artifacts/ggml-cpu-bin-linux-avx512-x64.so/libggml-cpu.so   deps/avx512/libggml-cpu.so
           cp artifacts/llama-bin-linux-avx512-x64.so/libllama.so         deps/avx512/libllama.so
           cp artifacts/llava-bin-linux-avx512-x64.so/libllava_shared.so  deps/avx512/libllava_shared.so
+
+          # Linux Musl
+          cp artifacts/ggml-bin-linux-noavx-musl-x64.so/libggml.so           deps/noavx/libggml-musl.so
+          cp artifacts/ggml-base-bin-linux-noavx-musl-x64.so/libggml-base.so deps/noavx/libggml-musl-base.so
+          cp artifacts/ggml-cpu-bin-linux-noavx-musl-x64.so/libggml-cpu.so   deps/noavx/libggml-musl-cpu.so
+          cp artifacts/llama-bin-linux-noavx-musl-x64.so/libllama.so         deps/noavx/libllama-musl.so
+          cp artifacts/llava-bin-linux-noavx-musl-x64.so/libllava_shared.so  deps/noavx/libllava_shared-musl.so
+
+          cp artifacts/ggml-bin-linux-avx-musl-x64.so/libggml.so             deps/avx/libggml-musl.so
+          cp artifacts/ggml-base-bin-linux-avx-musl-x64.so/libggml-base.so   deps/avx/libggml-musl-base.so
+          cp artifacts/ggml-cpu-bin-linux-avx-musl-x64.so/libggml-cpu.so     deps/avx/libggml-musl-cpu.so
+          cp artifacts/llama-bin-linux-avx-musl-x64.so/libllama.so           deps/avx/libllama-musl.so
+          cp artifacts/llava-bin-linux-avx-musl-x64.so/libllava_shared.so    deps/avx/libllava_shared-musl.so
+
+          cp artifacts/ggml-bin-linux-avx2-musl-x64.so/libggml.so            deps/avx2/libggml-musl.so
+          cp artifacts/ggml-base-bin-linux-avx2-musl-x64.so/libggml-base.so  deps/avx2/libggml-musl-base.so
+          cp artifacts/ggml-cpu-bin-linux-avx2-musl-x64.so/libggml-cpu.so    deps/avx2/libggml-musl-cpu.so
+          cp artifacts/llama-bin-linux-avx2-musl-x64.so/libllama.so          deps/avx2/libllama-musl.so
+          cp artifacts/llava-bin-linux-avx2-musl-x64.so/libllava_shared.so   deps/avx2/libllava_shared-musl.so
+
+          cp artifacts/ggml-bin-linux-avx512-musl-x64.so/libggml.so           deps/avx512/libggml-musl.so
+          cp artifacts/ggml-base-bin-linux-avx512-musl-x64.so/libggml-base.so deps/avx512/libggml-musl-base.so
+          cp artifacts/ggml-cpu-bin-linux-avx512-musl-x64.so/libggml-cpu.so   deps/avx512/libggml-musl-cpu.so
+          cp artifacts/llama-bin-linux-avx512-musl-x64.so/libllama.so         deps/avx512/libllama-musl.so
+          cp artifacts/llava-bin-linux-avx512-musl-x64.so/libllava_shared.so  deps/avx512/libllava_shared-musl.so
 
           # Windows
           cp artifacts/ggml-bin-win-noavx-x64.dll/ggml.dll            deps/noavx/ggml.dll
