Updated to be7c3034108473beda214fd1d7c98fd6a7a3bdf5

--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>6fefc05a7a4e67678v2</BinaryReleaseId>
+    <BinaryReleaseId>be7c3034108473be</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
