--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -461,19 +461,17 @@ jobs:
           if-no-files-found: error
   
   compile-android:
-    # Disable android build
-    if: false
-
+    name: Compile (Android)
     strategy:
       fail-fast: true
       matrix:
         include:
           - build: 'x86'
-            defines: '-DANDROID_ABI=x86'
+            defines: '-DANDROID_ABI=x86 -DCMAKE_C_FLAGS=-march=i686'
           - build: 'x86_64'
-            defines: '-DANDROID_ABI=x86_64'
+            defines: '-DANDROID_ABI=x86_64 -DCMAKE_C_FLAGS=-march=x86-64'
           - build: 'arm64-v8a'
-            defines: '-DANDROID_ABI=arm64-v8a'
+            defines: '-DANDROID_ABI=arm64-v8a -DCMAKE_C_FLAGS=-march=armv8.4a+dotprod'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -489,7 +487,7 @@ jobs:
       - name: Build
         id: cmake_build
         env:
-          CMAKE_FLAGS: '-DCMAKE_TOOLCHAIN_FILE=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-23'
+          CMAKE_FLAGS: '-DCMAKE_TOOLCHAIN_FILE=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-23 -DGGML_OPENMP=OFF -DGGML_LLAMAFILE=OFF -B build-android'
         run: |
           mkdir build
           cd build
@@ -502,7 +500,8 @@ jobs:
         with:
           path: ./build/src/libllama.so
           name: llama-bin-android-${{ matrix.build }}.so
-      - uses: actions/upload-artifact@v4
+      - name: Upload GGML
+        uses: actions/upload-artifact@v4
         with:
           path: ./build/ggml/src/libggml.so
           name: ggml-bin-android-${{ matrix.build }}.so
