--- a/LLama/LLamaSharp.Runtime.targets
+++ b/LLama/LLamaSharp.Runtime.targets
@@ -411,6 +411,16 @@
             <Abi>x86</Abi>
         </AndroidNativeLibrary>
         <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86/libggml-base.so">
+            <Link>runtimes/android-x86/native/libggml-base.so</Link>
+            <Abi>x86</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86/libggml-cpu.so">
+            <Link>runtimes/android-x86/native/libggml-cpu.so</Link>
+            <Abi>x86</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
             Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86/libllava_shared.so">
             <Link>runtimes/android-x86/native/libllava_shared.so</Link>
             <Abi>x86</Abi>
@@ -430,6 +440,16 @@
             <Abi>x86_64</Abi>
         </AndroidNativeLibrary>
         <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86_64/libggml-base.so">
+            <Link>lib/x86_64/libggml-base.so</Link>
+            <Abi>x86_64</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86_64/libggml-cpu.so">
+            <Link>lib/x86_64/libggml-cpu.so</Link>
+            <Abi>x86_64</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
             Include="$(MSBuildThisFileDirectory)runtimes/deps/android-x86_64/libllava_shared.so">
             <Link>lib/x86_64/libllava_shared.so</Link>
             <Abi>x86_64</Abi>
@@ -446,6 +466,16 @@
         <AndroidNativeLibrary Visible="false"
             Include="$(MSBuildThisFileDirectory)runtimes/deps/android-arm64-v8a/libggml.so">
             <Link>lib/arm64-v8a/libggml.so</Link>
+            <Abi>arm64-v8a</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-arm64-v8a/libggml-base.so">
+            <Link>lib/arm64-v8a/libggml-base.so</Link>
+            <Abi>arm64-v8a</Abi>
+        </AndroidNativeLibrary>
+        <AndroidNativeLibrary Visible="false"
+            Include="$(MSBuildThisFileDirectory)runtimes/deps/android-arm64-v8a/libggml-cpu.so">
+            <Link>lib/arm64-v8a/libggml-cpu.so</Link>
             <Abi>arm64-v8a</Abi>
         </AndroidNativeLibrary>
         <AndroidNativeLibrary Visible="false"
