Fixed LLama.Web errors starting session
InferenceOptions.SamplingPipeline now is not required. Is not sent from client
Added options to debug SignalR calls at appsettings.Development.json
Changed default web model to llava-v1.6-mistral-7b.Q3_K_XS.gguf, previous one (llama-2-7b-chat.Q4_0.gguf) did no exist

--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -10,13 +10,13 @@
     "ModelLoadType": 0,
     "Models": [
       {
-        "Name": "Example LLama2-7b-Chat",
+        "Name": "Example LLava-v1.6-mistral",
         "MaxInstances": 20,
-        "ModelPath": "..\\LLama.Unittest\\Models\\llama-2-7b-chat.Q4_0.gguf",
+        "ModelPath": "..\\LLama.Unittest\\Models\\llava-v1.6-mistral-7b.Q3_K_XS.gguf",
         "ContextSize": 2048,
         "BatchSize": 2048,
         "Threads": 4,
-        "GpuLayerCount": 6,
+        "GpuLayerCount": 32,
         "UseMemorymap": true,
         "UseMemoryLock": false,
         "MainGpu": 0,
