Update LLamaEmbedder, Examples packages, and KernelMemory examples
- Embedding generation: Extension with Batch processing + Normalization (important to have this built-in for KernelMemory).
- Examples had wrong nuget packages, updated to correct ones.
- Updated KernelMemory examples.
- added missing model parameters
- adding config is null check
- unit tests project update to prevent the constant download of many GBs
- ** for some reason Embeddings must be set to false in the kernel memory text embedding generator => we need to follow this and check it later because this should normally be 'true' ! **
- skipping one test for macOS (all other tests are OK)

--- a/LLama.Unittest/LLama.Unittest.csproj
+++ b/LLama.Unittest/LLama.Unittest.csproj
@@ -100,7 +100,7 @@
          We assume TempDownload now contains the downloaded file.
          (You might want to refine this if TempDownload could ever contain multiple files.) -->
         <ItemGroup Condition=" '$(DownloadNeeded)'=='true' ">
-            <TempFile Include="TempDownload\*.*" />
+            <TempFile Include="TempDownload/*.*" />
         </ItemGroup>
         <Message Text="Downloaded file (temp): @(TempFile)" Importance="high" Condition=" '$(DownloadNeeded)'=='true' " />
         <Move SourceFiles="@(TempFile)" DestinationFiles="$(DesiredFile)" Condition=" '$(DownloadNeeded)'=='true' and @(TempFile) != '' " />
