Update LLamaEmbedder, Examples packages, and KernelMemory examples
- Embedding generation: Extension with Batch processing + Normalization (important to have this built-in for KernelMemory).
- Examples had wrong nuget packages, updated to correct ones.
- Updated KernelMemory examples.
- added missing model parameters
- adding config is null check
- unit tests project update to prevent the constant download of many GBs
- ** for some reason Embeddings must be set to false in the kernel memory text embedding generator => we need to follow this and check it later because this should normally be 'true' ! **
- skipping one test for macOS (all other tests are OK)
- setting GpuLayerCount to 0 in Release in CIGpuLayerCount also for Windows

--- a/LLama.Unittest/LLama.Unittest.csproj
+++ b/LLama.Unittest/LLama.Unittest.csproj
@@ -25,6 +25,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xunit.SkippableFact" Version="1.5.23" />
   </ItemGroup>
 
     <!-- Define each file to download.
@@ -113,9 +114,7 @@
     <!-- Main target to process each file by calling the DownloadSingleFile target for each item.
        The MSBuild task will batch over the DownloadFileItem items, passing in each file’s metadata. -->
     <Target Name="DownloadAllFiles" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
-        <MSBuild Projects="$(MSBuildProjectFile)"
-                 Targets="DownloadSingleFile"
-                 Properties="SourceUrl=%(DownloadFileItem.SourceUrl);DestinationFolder=%(DownloadFileItem.DestinationFolder);LocalFileName=%(DownloadFileItem.LocalFileName);TargetFramework=once" />
+        <MSBuild Projects="$(MSBuildProjectFile)" Targets="DownloadSingleFile" Properties="SourceUrl=%(DownloadFileItem.SourceUrl);DestinationFolder=%(DownloadFileItem.DestinationFolder);LocalFileName=%(DownloadFileItem.LocalFileName);TargetFramework=once" />
     </Target>
 
     <ItemGroup>
