--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>ceda28ef8e310a8de</BinaryReleaseId>
+    <BinaryReleaseId>ceda28ef8e310_v2</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
